--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
             <div class="card">
                 <a href="https://cardosofrc.github.io/calculadora/">Calculadora</a>
-                <a href="">Projeto 2</a>
-                <a href="">Projeto 3</a>
-                <a href="">Projeto 4</a>
+                <a href="https://cardosofrc.github.io/rede/">Landing Page</a>
+                <a href="https://cardosofrc.github.io/dguster/">Cardápio Digital</a>
+                <a href="https://github.com/cardosofrc/eduz.git">Biblioteca em Java</a>
             </div>
 
         </section>
@@ -33,7 +33,7 @@
             <div class="network-details">
                 <a href=""><i class='bx bxl-linkedin-square'></i></a>
                 <a href=""><i class='bx bxl-github'></i></a>
-                <a href=""><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.instagram.com/netocardoso1982?igsh=MWY5bTcwcjF0YnNwcw%3D%3D&utm_source=qr "><i class='bx bxl-instagram-alt'></i></a>
             </div>
         </section>
 
